# kfusion

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  cutil_math.h  devicequery.cpp  glproxy.h  helpers.cu  helpers.h  interface.cpp  interface.h  kfusion.cu  kfusion.files  kfusion.h  kfusion.includes  kinect.cpp  perfstats.h  test.cpp  test_functions  test_functions.cpp
cmake/: FindFreenect.cmake  FindTooN.cmake
dep/TooN/: CMakeLists.txt  Doxyfile  GR_SVD.h  Makefile.in  QR_Lapack.h  SymEigen.h  TooN.h  TooN.pc  configure  configure.ac  helpers.h  numdiff.awk  sim3.h
dep/TooN/doc/: documentation.h
dep/TooN/functions/: fadbad.h
dep/TooN/internal/: allocator.hh  matrix.hh  mbase.hh  operators.hh  vector.hh
dep/TooN/optimization/: conjugate_gradient.h
dep/TooN/regressions/: complex.cc  qr.cc  qr.txt  regression.h
